--- a/src/App.css
+++ b/src/App.css
@@ -65,10 +65,6 @@ ul {
 }
 
 .received {
-  background: #f9f9f9;
-  color: #333;
-
-  time {
-    color: #666 !important;
-  }
+  background: #2c2d2d;
+  color: #ffffff;
 }
